gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test12822.d
version https://git-lfs.github.com/spec/v1
oid sha256:e95dc85e42f457685e9b0fce343984b02c0486d05762e9e60575f2fc4492777c
size 372
